# UserRL

./: .gitignore  CONTRIBUTING.md  README.md  install_gyms.sh  requirements.txt  setup.py
data/bamboogle_multiturn/: test.parquet
data/function_multiturn/: test.parquet  train.parquet
data/intention_multiturn/: test.parquet  train.parquet
data/persuasion_multiturn/: test.parquet  train.parquet
data/tau_multiturn/: test.parquet  train.parquet
data/telepathy_multiturn/: test.parquet  train.parquet
data/travel2222_multiturn_onechoice/: test.parquet  train.parquet
data/travel22_multiturn_onechoice/: test.parquet  train.parquet
data/travel233_multiturn_onechoice/: test.parquet  train.parquet
data/travel333_multiturn_onechoice/: test.parquet  train.parquet
data/travel334_multiturn_onechoice/: test.parquet  train.parquet
data/travel33_multiturn_onechoice/: test.parquet  train.parquet
data/travel444_multiturn_onechoice/: test.parquet  train.parquet
data/travel44_multiturn_onechoice/: test.parquet  train.parquet
data/travel_multiturn_onechoice/: test.parquet  train.parquet
data/turtle_multiturn/: test.parquet  train.parquet
eval/: README.md  analyze.py  eval.py  eval.sh  host.sh  merge.sh
eval/schema/: interact_tool.yaml
gyms/: .gitignore  CONTRIBUTING.md  README.md
gyms/AlfworldGym/: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt  setup.py  test_human.py
gyms/AlfworldGym/alfworldgym/: __init__.py  config.py  data_loader.py  utils.py
gyms/AlfworldGym/alfworldgym/config/: template.yaml
gyms/AlfworldGym/alfworldgym/data/: eval_in_distribution.json
gyms/AlfworldGym/alfworldgym/env/: __init__.py  alfworld_env.py
sft/: README.md  qwen3_customized.yaml
verl/: protocol.py
(+137 files in other folders)
